fix merge issues

--- a/travel_together_app/travel_together/templates/main/trip.html
+++ b/travel_together_app/travel_together/templates/main/trip.html
@@ -11,13 +11,6 @@
 
 {% block content %}
 <div class="single_trip_container">
-  <img class="trip-photo" src="{{ url_for('static', filename='resources/example-trip-1.jpg') }}" alt="Avatar">
-  <h2 class="trip-title">{{ trip.title }}</h2>
-
-  {% if current_user.is_editor_for(trip) %}
-  <button class="primary-button" id="openFormPopup" fdprocessedid="vywhbj">Modify Trip</button>
-  {% endif %}
-
   <div class="container">
     <div id="formPopupOverlay" style="display:none;"></div>
 
@@ -125,176 +118,172 @@
       </div>
     </div>
 
-    <<<<<<< HEAD {% if not (trip.participants|length>= max_travelers) or (current_user.age < min_age and
-        current_user.age> max_age)
-        %}
-        {% if not already_joined %}
-        <form action="{{ url_for('main.join_trip', trip_id=trip.id) }}" method="POST">
-          <button type="submit">Join Trip!</button>
-        </form>
-        {% else %}
-        <p>You are an active member of this trip.</p>
-        {% endif %}
-        {% endif %}
-        =======
-        <div id="formPopupOverlay" style="display:none;">
-          <div id="formPopupModal" style="display:none;">
-            <div id="formPopupContent">
-              {% include 'main/edit_trip_form.html' %}
-            </div>
-            <button id="closeFormPopup">Close</button>
+    {% if not (trip.participants|length>= max_travelers) or (current_user.age < min_age and current_user.age> max_age)
+      %}
+      {% if not already_joined %}
+      <form action="{{ url_for('main.join_trip', trip_id=trip.id) }}" method="POST">
+        <button type="submit">Join Trip!</button>
+      </form>
+      {% else %}
+      <p>You are an active member of this trip.</p>
+      {% endif %}
+      {% endif %}
+      <div id="formPopupOverlay" style="display:none;">
+        <div id="formPopupModal" style="display:none;">
+          <div id="formPopupContent">
+            {% include 'main/edit_trip_form.html' %}
           </div>
+          <button id="closeFormPopup">Close</button>
         </div>
-        >>>>>>> 9eff171fa612003e682b9bbdde2d7c7bf219d74f
+      </div>
 
-        <div class="page-contents">
-          {% if already_joined %}
-          <div id="message-board-area" class="message-board-area">
-            <div class="page-contents-header">
-              <h2>Message Board</h2>
-              <h4>Chat With Your Tripmates</h4>
-            </div>
-
-            <div class="forums">
-              <div class="forum-tabs">
-                {% for topic in forum_topics %}
-                {% if topic==active_topic %}
-                <a class="topic active-topic"
-                  href="{{ url_for('main.trip', trip_id=trip.id, forum_topic=topic) }}#message-board-area">{{ topic
-                  }}</a>
-                {% else %}
-                <a class="topic"
-                  href="{{ url_for('main.trip', trip_id=trip.id, forum_topic=topic) }}#message-board-area">{{ topic
-                  }}</a>
-                {% endif %}
-                {% endfor %}
-                <button id="new-topic-button">+</button>
-                <div class="tab-spacer"></div>
-              </div>
-              <div class="chat-wrapper">
-                <div class="messages-container">
-                  {% if active_forum_messages %}
-                  {% for message in active_forum_messages %}
-                  {% if message.user_id==current_user.id %}
-                  <div class="message-container sent-message">
-                    {% else %}
-                    <div class="message-container received-message">
-                      {% endif %}
-                      <div class="message-header">
-                        <a class="message-header" href="{{ url_for('main.profile', user_id=message.user.id) }}"
-                          style="text-decoration: none; color: inherit;">
-                          <img src="{{ url_for('static', filename='resources/' ~ message.user.profile_pic) }}"
-                            alt="Profile" class="header-icon" />
-                          <div class="message-info">
-                            <p><strong>{{ message.user.name }}</strong></p>
-                            <p>{{ message.timestamp.strftime('%b %d, %Y, %H:%M') }}</p>
-                          </div>
-                        </a>
-                      </div>
-                      <p>{{ message.content }}</p>
-                    </div>
-                    {% endfor %}
-                    {% else %}
-                    <p>Write the first message for this forum...</p>
-                    {% endif %}
-                  </div>
-                </div>
-
-                <form action="{{ url_for('main.new_message', trip_id=trip.id) }}#message-board-area" method="post">
-                  <input type="hidden" name="forum_topic" value="{{ active_topic }}" id="forum-topic-input"
-                    data-active-topic="{{ active_topic }}">
-
-                  <div id="new-forum-topic-input" style="display: none">
-                    <label>Name your new forum topic:</label>
-                    <input type="text" name="new_forum_topic" placeholder="Enter new forum topic name..."
-                      maxlength="64">
-                    <button type="button" id="cancel-new-forum-topic">Cancel</button>
-                  </div>
-
-                  <div class="send-message">
-                    <textarea class="send-message-area" maxlength="200" name="message-content"
-                      placeholder="What's on your mind?"></textarea>
-                    <button class="send-message-button" type="submit">Send</button>
-                  </div>
-                </form>
-              </div>
-            </div>
-
-            <div class="calendar-wrapper">
-              <div class="page-contents-header">
-                <h2>Event Calendar</h2>
-                <h4>See What Events/Meetups Are Scheduled For This Trip</h4>
-              </div>
-              <div id="calendar"></div>
-            </div>
-
-            <div id="meetup-area">
-              <div class="meetup-area-content">
-                <h3>Create a Meetup...</h3>
-                <form id="meetup-form">
-                  <div class="form-group">
-                    <label>Location:</label>
-                    <input type="text" name="location" required placeholder="e.g., School library or Zoom call">
-                  </div>
-
-                  <div class="form-group">
-                    <label>Date:</label>
-                    <input type="date" name="date" id="meetup-date" required>
-                  </div>
-
-                  <div class="form-group">
-                    <label>Time:</label>
-                    <input type="time" name="time" required>
-                  </div>
-
-                  <div class="form-group">
-                    <label>Link (optional):</label>
-                    <input type="text" name="link" placeholder="Add a link if needed...">
-                    <small>Add a link for online meetings, such as Zoom, Google Meet, etc.</small>
-                  </div>
-
-                  <div class="form-group">
-                    <label>Description:</label>
-                    <textarea name="description" rows="5" maxlength="1024" required
-                      placeholder="Describe your meetup/event..."></textarea>
-                  </div>
-
-                  <div class="meetup-area-buttons">
-                    <button type="button" id="cancel-meetup-creation-button">Cancel</button>
-                    <button type="submit">Create Meetup</button>
-                  </div>
-                </form>
-              </div>
-            </div>
-
-            <div id="existing-meetup-popup" class="existing-meetup-popup">
-              <div class="existing-meetup-popup-content">
-                <h3>Meetup Details</h3>
-                <br>
-                <p><strong>Location: </strong><span id="detail-location"></span></p>
-                <p><strong>Description: </strong><span id="detail-description"></span></p>
-                <p><strong>Link: </strong><a id="detail-link" href="#" target="_blank"></a></p>
-
-                <div class="existing-meetup-popup-buttons">
-                  <button id="open-link" style="display:none;">Open Link</button>
-                  <button id="delete-event">Delete Event</button>
-                  <button id="close-event">Close</button>
-                </div>
-              </div>
-            </div>
-            {% endif %}
+      <div class="page-contents">
+        {% if already_joined %}
+        <div id="message-board-area" class="message-board-area">
+          <div class="page-contents-header">
+            <h2>Message Board</h2>
+            <h4>Chat With Your Tripmates</h4>
           </div>
-          {% endblock %}
 
-          {% block scripts %}
-          <script src="{{ url_for('static', filename='travel-together.js') }}"></script>
-          <script src="{{ url_for('static', filename='js/trip.js') }}"></script>
-          {% if already_joined %}
-          <script src="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/6.1.8/index.global.min.js"></script>
-          <script>
-            var initialDateValue = "{{ trip.start_date.strftime('%Y-%m-%d') }}";
-            var tripId = "{{ trip.id }}";
-          </script>
-          <script src="{{ url_for('static', filename='calendar.js') }}"></script>
+          <div class="forums">
+            <div class="forum-tabs">
+              {% for topic in forum_topics %}
+              {% if topic==active_topic %}
+              <a class="topic active-topic"
+                href="{{ url_for('main.trip', trip_id=trip.id, forum_topic=topic) }}#message-board-area">{{ topic
+                }}</a>
+              {% else %}
+              <a class="topic"
+                href="{{ url_for('main.trip', trip_id=trip.id, forum_topic=topic) }}#message-board-area">{{ topic
+                }}</a>
+              {% endif %}
+              {% endfor %}
+              <button id="new-topic-button">+</button>
+              <div class="tab-spacer"></div>
+            </div>
+            <div class="chat-wrapper">
+              <div class="messages-container">
+                {% if active_forum_messages %}
+                {% for message in active_forum_messages %}
+                {% if message.user_id==current_user.id %}
+                <div class="message-container sent-message">
+                  {% else %}
+                  <div class="message-container received-message">
+                    {% endif %}
+                    <div class="message-header">
+                      <a class="message-header" href="{{ url_for('main.profile', user_id=message.user.id) }}"
+                        style="text-decoration: none; color: inherit;">
+                        <img src="{{ url_for('static', filename='resources/' ~ message.user.profile_pic) }}"
+                          alt="Profile" class="header-icon" />
+                        <div class="message-info">
+                          <p><strong>{{ message.user.name }}</strong></p>
+                          <p>{{ message.timestamp.strftime('%b %d, %Y, %H:%M') }}</p>
+                        </div>
+                      </a>
+                    </div>
+                    <p>{{ message.content }}</p>
+                  </div>
+                  {% endfor %}
+                  {% else %}
+                  <p>Write the first message for this forum...</p>
+                  {% endif %}
+                </div>
+              </div>
+
+              <form action="{{ url_for('main.new_message', trip_id=trip.id) }}#message-board-area" method="post">
+                <input type="hidden" name="forum_topic" value="{{ active_topic }}" id="forum-topic-input"
+                  data-active-topic="{{ active_topic }}">
+
+                <div id="new-forum-topic-input" style="display: none">
+                  <label>Name your new forum topic:</label>
+                  <input type="text" name="new_forum_topic" placeholder="Enter new forum topic name..." maxlength="64">
+                  <button type="button" id="cancel-new-forum-topic">Cancel</button>
+                </div>
+
+                <div class="send-message">
+                  <textarea class="send-message-area" maxlength="200" name="message-content"
+                    placeholder="What's on your mind?"></textarea>
+                  <button class="send-message-button" type="submit">Send</button>
+                </div>
+              </form>
+            </div>
+          </div>
+
+          <div class="calendar-wrapper">
+            <div class="page-contents-header">
+              <h2>Event Calendar</h2>
+              <h4>See What Events/Meetups Are Scheduled For This Trip</h4>
+            </div>
+            <div id="calendar"></div>
+          </div>
+
+          <div id="meetup-area">
+            <div class="meetup-area-content">
+              <h3>Create a Meetup...</h3>
+              <form id="meetup-form">
+                <div class="form-group">
+                  <label>Location:</label>
+                  <input type="text" name="location" required placeholder="e.g., School library or Zoom call">
+                </div>
+
+                <div class="form-group">
+                  <label>Date:</label>
+                  <input type="date" name="date" id="meetup-date" required>
+                </div>
+
+                <div class="form-group">
+                  <label>Time:</label>
+                  <input type="time" name="time" required>
+                </div>
+
+                <div class="form-group">
+                  <label>Link (optional):</label>
+                  <input type="text" name="link" placeholder="Add a link if needed...">
+                  <small>Add a link for online meetings, such as Zoom, Google Meet, etc.</small>
+                </div>
+
+                <div class="form-group">
+                  <label>Description:</label>
+                  <textarea name="description" rows="5" maxlength="1024" required
+                    placeholder="Describe your meetup/event..."></textarea>
+                </div>
+
+                <div class="meetup-area-buttons">
+                  <button type="button" id="cancel-meetup-creation-button">Cancel</button>
+                  <button type="submit">Create Meetup</button>
+                </div>
+              </form>
+            </div>
+          </div>
+
+          <div id="existing-meetup-popup" class="existing-meetup-popup">
+            <div class="existing-meetup-popup-content">
+              <h3>Meetup Details</h3>
+              <br>
+              <p><strong>Location: </strong><span id="detail-location"></span></p>
+              <p><strong>Description: </strong><span id="detail-description"></span></p>
+              <p><strong>Link: </strong><a id="detail-link" href="#" target="_blank"></a></p>
+
+              <div class="existing-meetup-popup-buttons">
+                <button id="open-link" style="display:none;">Open Link</button>
+                <button id="delete-event">Delete Event</button>
+                <button id="close-event">Close</button>
+              </div>
+            </div>
+          </div>
           {% endif %}
-          {% endblock %}
+        </div>
+        {% endblock %}
+
+        {% block scripts %}
+        <script src="{{ url_for('static', filename='travel-together.js') }}"></script>
+        <script src="{{ url_for('static', filename='js/trip.js') }}"></script>
+        {% if already_joined %}
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/6.1.8/index.global.min.js"></script>
+        <script>
+          var initialDateValue = "{{ trip.start_date.strftime('%Y-%m-%d') }}";
+          var tripId = "{{ trip.id }}";
+        </script>
+        <script src="{{ url_for('static', filename='calendar.js') }}"></script>
+        {% endif %}
+        {% endblock %}
