--- a/travel_together_app/travel_together/static/css/trip_form.css
+++ b/travel_together_app/travel_together/static/css/trip_form.css
@@ -275,7 +275,7 @@ input.additional-destination {
 .double-range {
     display: flex;
     align-items: center;
-    width: 100%;
+    flex: 1;
     gap: 1vw;
 }
 
@@ -286,4 +286,10 @@ input.additional-destination {
     gap: 1vh;
     flex: 1;
     min-width: 0;
+}
+
+/* ================= CHECKBOXES/FINALIZATION ================= */
+
+.single-entry3 .checkbox-wrapper {
+    margin-left: 0;
 }
