--- a/travel_together_app/travel_together/static/travel-together.css
+++ b/travel_together_app/travel_together/static/travel-together.css
@@ -10,7 +10,7 @@ body {
   padding: 0;
   background: #f2e0c3;
   color: black;
-  font-family: arial, sans-serif;
+  font-family: 'Courier New', monospace;
   font-size: 1rem;
   padding-top: 60px;
   padding-bottom: 4vh;
