--- a/travel_together_app/travel_together/templates/auth/signup.html
+++ b/travel_together_app/travel_together/templates/auth/signup.html
@@ -32,9 +32,8 @@
 
     <div class="info-container">
         <img src="../../static/resources/logo-full.png" class="info-image" />
-        <h1>Welcome to Travel together&trade;</h1>
-        <p>Plan trips, share unforgettable adventures, and meet fellow travelers who love discovering places just like
-            you.</p>
+        <h1>Welcome!&trade;</h1>
+        <p>Travel with classmates or make new lifelong friends.</p>
     </div>
 </div>
 {% endblock %}
