--- a/travel_together_app/travel_together/templates/auth/signup2.html
+++ b/travel_together_app/travel_together/templates/auth/signup2.html
@@ -1,5 +1,5 @@
 {% block head %}
-<title>Sign up - Travel together</title>
+<title>Sign up - </title>
 <link rel="stylesheet" href="{{ url_for('static', filename='css/signup.css') }}" />
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/slim-select/dist/slimselect.css">
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
@@ -76,7 +76,7 @@
     </div>
     <div class="info-container">
         <img src="../../static/resources/logo-full.png" class="info-image" />
-        <h1>Welcome to Travel together&trade;</h1>
+        <h1>Welcome to &trade;</h1>
         <p>Plan trips, share unforgettable adventures, and meet fellow travelers who love discovering places just like
             you.</p>
     </div>
