--- a/travel_together_app/travel_together/templates/auth/login.html
+++ b/travel_together_app/travel_together/templates/auth/login.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block head %}
-<title>Login - Travel together</title>
+<title>Login - SchoolTrip</title>
 <link rel="stylesheet" href="{{ url_for('static', filename='css/login.css') }}" />
 {% endblock %}
 
@@ -28,8 +28,8 @@
     </div>
     <div class="info-container">
         <img src="../../static/resources/logo-full.png" class="info-image" />
-        <h1>Welcome to Travel together&trade;</h1>
-        <p>Plan trips, share unforgettable adventures, and meet fellow travelers who love discovering places just like
+        <h1>Welcome to SchoolTrip&trade;</h1>
+        <p>Plan trips, share unforgettable adventures, and meet students who love discovering places just like
             you.</p>
     </div>
 </div>
