--- a/travel_together_app/travel_together/templates/main/index.html
+++ b/travel_together_app/travel_together/templates/main/index.html
@@ -29,7 +29,7 @@
       </a>
     </div>
 
-    <img src="../../static/resources/index-background.jpeg"/>
+    <img src="../../static/resources/banner2.jpg"/>
   </div>
 
   
