Fix meetup display

--- a/travel_together_app/travel_together/templates/main/trip.html
+++ b/travel_together_app/travel_together/templates/main/trip.html
@@ -261,6 +261,7 @@
               <h3>Meetup Details</h3>
               <br>
               <p><strong>Location: </strong><span id="detail-location"></span></p>
+              <p><strong>Start date: </strong><span id="detail-start"></span></p>
               <p><strong>Description: </strong><span id="detail-description"></span></p>
               <p><strong>Link: </strong><a id="detail-link" href="#" target="_blank"></a></p>
 
