--- a/travel_together_app/travel_together/static/css/trip.css
+++ b/travel_together_app/travel_together/static/css/trip.css
@@ -556,3 +556,15 @@
     border: solid 1px black;
 }
 
+/*====EDIT FORM POPUP=====*/
+#formPopupOverlay {
+    display: none; 
+    position: fixed; 
+    z-index: 100; 
+    left: 0;
+    bottom: 0;
+    width: 100%; 
+    height: 100vh;
+    overflow: auto; 
+    background-color: rgba(0,0,0,0.3); 
+}
