show joinable trips button now omits already joined trips

--- a/travel_together_app/travel_together/static/css/trip.css
+++ b/travel_together_app/travel_together/static/css/trip.css
@@ -389,6 +389,17 @@
     text-align: center;
 }
 
+.member-specifics {
+    text-align: center;
+}
+
+.member-specifics.membership-level {
+    text-align: center;
+    color: red;
+    text-shadow: -1px -1px 0 white, 1px -1px 0 white, -1px 1px 0 white, 1px 1px 0 white;
+}
+
+
 /*==========MESSAGES===========*/
 
 .calendar-wrapper,
