--- a/travel_together_app/travel_together/templates/trip_template.html
+++ b/travel_together_app/travel_together/templates/trip_template.html
@@ -10,7 +10,8 @@
              data-destinations="{{ trip.destinations|lower }}"
              data-current-participants="{{ trip.participants|length }}"
              data-max-travelers="{{ trip.max_travelers or 999 }}"
-             data-status="{{ trip.status }}">
+             data-status="{{ trip.status }}"
+             data-is-member="{{'true' if current_user in trip.participants else 'false' }}">
             
             <img class="trip-photo" src="{{ url_for('static', filename='resources/' ~ trip.image) }}" alt="{{ trip.title }}">
             <h2 class="trip-title">{{ trip.title }}</h2>    
