Fix modify trip form and remove duplicate join trip button

--- a/travel_together_app/travel_together/templates/main/trip.html
+++ b/travel_together_app/travel_together/templates/main/trip.html
@@ -120,11 +120,7 @@
     </div>
 
     {% if not (trip.participants|length>= max_travelers) or (current_user.age < min_age and current_user.age> max_age)%}
-      {% if not already_joined %}
-      <form action="{{ url_for('main.join_trip', trip_id=trip.id) }}" method="POST">
-        <button type="submit">Join Trip!</button>
-      </form>
-      {% else %}
+      {% if already_joined %}
       <p class="member-specifics">You are an active member of this trip.</p>
       {% if current_user.is_editor_for(trip) %}
       <p class="member-specifics membership-level">Membership Level: Editor</p>
