--- a/travel_together_app/travel_together/templates/main/edit_trip_form.html
+++ b/travel_together_app/travel_together/templates/main/edit_trip_form.html
@@ -164,15 +164,17 @@
                             </div>
 
                             <div class="range-input">
-                                <input type="range" class="min" min="0" max="100" value="{{ trip.min_age or 30 }}"
-                                    step="1" id="age-min-slider">
+                                <input type="range" class="min" min="0" max="100"
+                                    value="{{ 30 if trip.min_age is none else trip.min_age }}" step="1"
+                                    id="age-min-slider">
                                 <input type="range" class="max" min="0" max="100" value="{{ trip.max_age or 70 }}"
                                     step="1" id="age-max-slider">
                             </div>
 
                             <div class="text-input">
                                 <label for="min-age" class="range-label">From:</label>
-                                <input type="number" name="min_age" id="min-age" value="{{ trip.min_age or 30 }}">
+                                <input type="number" name="min_age" id="min-age"
+                                    value="{{ 30 if trip.min_age is none else trip.min_age }}">
                                 <label for="max-age" class="range-label max-label">To:</label>
                                 <input type="number" name="max_age" id="max-age" value="{{ trip.max_age or 70 }}">
                             </div>
